--- a/package.json
+++ b/package.json
@@ -36,6 +36,13 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
+  "dependencies": {
+    "express": "^4.17.13",
+    "jasmine": "^4.3.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "sharp": "^0.28.3",
+    "supertest": "^2.0.12"
+  }
   "keywords": [],
   "description": ""
 }
