--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,12 @@
         "es2021": true,
         "node": true
     },
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+    "extends": [
+         "eslint:recommended",
+         "plugin:@typescript-eslint/recommended",
+         "plugin:@typescript-eslint/eslint-recommended",
+         "prettier"
+        ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
@@ -13,7 +18,8 @@
     "rules": {
         "@typescript-eslint/no-explicit-any": "error",
         "@typescript-eslint/explicit-function-return-type": "error",
-        "@typescript-eslint/explicit-module-boundary-types": "error"
+        "@typescript-eslint/explicit-module-boundary-types": "error",
+        "prettier/prettier": 2 
     },
     "ignorePatterns": ["dist"]
 }
