--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon src/index.ts",
     "lint": "eslint '*/**/*.{js,ts}' --fix",
     "test": "npm run build && npm run jasmine",
-    "prettier": "prettier --write"
+    "prettier": "prettier --write",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "author": "maryam",
   "license": "ISC",
@@ -35,6 +36,10 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "[typescript]": {
+    "editor.formatOnPaste": false,
+    "editor.formatOnSave": false
   },
   "keywords": [],
   "description": ""
