--- a/package.json
+++ b/package.json
@@ -6,21 +6,13 @@
     "build": "npx tsc",
     "jasmine": "jasmine",
     "start": "nodemon src/index.ts",
-    "lint": "eslint '*/**/*.{js,ts}' --fix",
+    "lint": "eslint '*/**/*.{ts}' --fix",
     "test": "npm run build && npm run jasmine",
-    "prettier": "prettier --write",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    "prettier": "prettier --write"
   },
   "author": "maryam",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1",
-    "jasmine": "^4.3.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "module-name": "^0.0.1-security",
-    "sharp": "^0.30.7",
-    "supertest": "^6.2.4"
-  },
+
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.3.0",
@@ -37,7 +29,13 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
-  "[typescript]": {
+  "dependencies": {
+    "express": "^4.17.13",
+    "jasmine": "^4.3.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "sharp": "^0.28.3",
+    "supertest": "^2.0.12"
+  },  "[typescript]": {
     "editor.formatOnPaste": false,
     "editor.formatOnSave": false
   },
